# boubo_trace

./: .gitignore  .gitmodules  .info  Cargo.toml  README.md  todo_list.md
src/: lib.rs  main.rs  syscall.rs  tracee.rs
src/syscall/: new_types.rs  parse_error.rs  sock_type.rs  syscall_args.rs  utils.rs
test_program/: .gitignore  Makefile  main.c
test_programs/: Makefile  bind.c  clone.c  exec.c  null_write.c  open.c  read_limit.c  socket_open.c  test.c  threads.c
tests/: basic_syscall_trace.rs  main.c
tests/snapshots/: basic_syscall_trace__tests__simple_test@bind.exec.snap  basic_syscall_trace__tests__simple_test@bind.exec.snap.new  basic_syscall_trace__tests__simple_test@clone.exec.snap  basic_syscall_trace__tests__simple_test@exec.exec.snap  basic_syscall_trace__tests__simple_test@null_write.exec.snap  basic_syscall_trace__tests__simple_test@open.exec.snap  basic_syscall_trace__tests__simple_test@read_limit.exec.snap  basic_syscall_trace__tests__simple_test@socket_open.exec.snap  basic_syscall_trace__tests__simple_test@test.exec.snap  basic_syscall_trace__tests__simple_test@threads.exec.snap
thesis_text/: bibliography.yml  thesis.typ
thesis_text/evaluation/: .gitignore
thesis_text/evaluation/benchmarks/: darktable-cli-small.json  darktable-cli.json  iperf3.json  sysbench.json  write_bench.c  write_bench.json
thesis_text/evaluation/coverage/: extract_supported.py
thesis_text/source_codes/: exec.c  open.c  ptrace_example.c  write_bench.c  write_example.c
thesis_text/source_codes/ffi/: Cargo.toml
thesis_text/source_codes/ffi/src/: lib.rs
thesis_text/sources/: .gitignore  architecture.mermaid  intentrace_output.txt  mermaid_config.json  render_charts.sh  strace_open.txt  tracee_restart.mermaid  tree.txt  variable_reading.mermaid  wait_for_stop.mermaid
