[package]
name = "boubo_trace"
authors = ["Roman Táborský"]
description = "Tool to trace and save syscalls from specified program"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
default-run = "boubo_tracer"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
derive_builder = "0.20.2"
elf = "0.8.0"
env_logger = "0.11.10"
libc = { version = "0.2.186", features = ["extra_traits"] }
log = "0.4"
nix = { version = "0.31.3", features = ["ptrace", "uio", "fs", "sched", "socket", "net"] }
rkyv = "0.8.16"
serde_json = "1.0.149"
spawn-ptrace = "0.1.2"
strum = { version = "0.28.0", features = ["derive"]}
thiserror = "2.0.18"
x86_64 = { version = "0.15.4", default-features = false, features = ["instructions"] }

[dev-dependencies]
insta = { version = "1.47.2", features = ["glob", "json"] }

[lints.clippy]
pedantic = {level = "warn", priority = -1}
cast_possible_truncation = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
struct_field_names = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
allow_attributes = "warn"
# arbitrary_source_item_ordering = "warn"

[[bin]]
name = "boubo_tracer"

[[bin]]
name = "boubo_viewer"

[profile.dev.package]
insta.opt-level = 3
